--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -22,6 +22,7 @@
   .Auth_form_content {
     padding-left: 12%;
     padding-right: 12%;
+    min-height: 200px;
   }
   
   .Auth_form_title {
@@ -37,3 +38,4 @@
     font-weight: 600;
     color: rgb(34, 34, 34);
   }
+
